--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/medicare
+MONGODB_URI=mongodb+srv://amadouSeye001:%40NitroZeus001%21@medicare.lwndmm.mongodb.net/?retryWrites=true&w=majority&appName=medicare
