--- a/mobile/.env
+++ b/mobile/.env
@@ -1,1 +1,6 @@
 EXPO_PUBLIC_API_URL=https://medicare-j4pa.onrender.com
+
+# Google OAuth
+EXPO_PUBLIC_GOOGLE_EXPO_CLIENT_ID=xxxxxxxxx-xxxxxxxxxxxx.apps.googleusercontent.com
+EXPO_PUBLIC_GOOGLE_ANDROID_CLIENT_ID=xxxxxxxxx-xxxxxxxxxxxx.apps.googleusercontent.com
+EXPO_PUBLIC_GOOGLE_IOS_CLIENT_ID=xxxxxxxxx-xxxxxxxxxxxx.apps.googleusercontent.com
