--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,11 +11,14 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.5.0",
     "@react-oauth/google": "^0.12.2",
     "expo": "~54.0.13",
     "expo-auth-session": "~6.0.2",
