--- a/mobile/.env
+++ b/mobile/.env
@@ -1,3 +1,7 @@
 EXPO_PUBLIC_API_URL=https://medicare-j4pa.onrender.com
 
 # Google OAuth
+cloudinary_url=https://res.cloudinary.com/medicare/image/upload
+cloudinary_api_key=355667254877725
+cloudinary_api_secret=0H7yHtvt0xycdKCcCgMoYsmjJgk
+cloudinary_cloud_name=dipmlivug
