--- a/backend/.env
+++ b/backend/.env
@@ -8,8 +8,8 @@ SMTP_USER=medicare@gmail.com
 SMTP_PASSWORD=medicare@123
 SMTP_FROM=medicare@gmail.com
 SMTP_IS_SECURE=true
-SMTP_IS_AUTH=true
-SMTP_IS_TLS=true
-SMTP_IS_SSL=true
-SMTP_IS_STARTTLS=true
-SMTP_IS_DNS=true
+
+cloudinary_url=https://res.cloudinary.com/medicare/image/upload
+cloudinary_api_key=355667254877725
+cloudinary_api_secret=0H7yHtvt0xycdKCcCgMoYsmjJgk
+cloudinary_cloud_name=dipmlivug
