--- a/backend/.env
+++ b/backend/.env
@@ -13,3 +13,7 @@ cloudinary_url=https://res.cloudinary.com/medicare/image/upload
 cloudinary_api_key=355667254877725
 cloudinary_api_secret=0H7yHtvt0xycdKCcCgMoYsmjJgk
 cloudinary_cloud_name=dipmlivug
+
+GOOGLE_CLIENT_ID=1014357204865-ljmmlqvmltc3a7r7qa5d9ugntht67e7u.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=GOCSPX-
+
