Update: Corriger l'URL du backend vers application-mobile-medicare

--- a/mobile/.env
+++ b/mobile/.env
@@ -1,5 +1,5 @@
 
-EXPO_PUBLIC_API_URL=https://medicare-j4pa.onrender.com
+EXPO_PUBLIC_API_URL=https://application-mobile-medicare.onrender.com
 
 # Google OAuth
 EXPO_PUBLIC_GOOGLE_IOS_CLIENT_ID=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.apps.googleusercontent.com
