--- a/mobile/.env
+++ b/mobile/.env
@@ -1,1 +1,3 @@
 EXPO_PUBLIC_API_URL=https://medicare-j4pa.onrender.com
+
+androidClientId=1014357204865-ljmmlqvmltc3a7r7qa5d9ugntht67e7u.apps.googleusercontent.com
