--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.0",
     "@react-oauth/google": "^0.12.2",
+    "cloudinary": "^2.8.0",
     "expo": "~54.0.13",
     "expo-auth-session": "~7.0.8",
     "expo-constants": "~18.0.9",
