--- a/mobile/.env
+++ b/mobile/.env
@@ -1,9 +1,9 @@
-EXPO_PUBLIC_API_URL=https://application-mobile-medicare.onrender.com
+# EXPO_PUBLIC_API_URL=https://application-mobile-medicare.onrender.com
+EXPO_PUBLIC_API_URL=https://medicare-j4pa.onrender.com
 EXPO_PUBLIC_GOOGLE_EXPO_CLIENT_ID=1014357204865-ljmmlqvmltc3a7r7qa5d9ugntht67e7u.apps.googleusercontent.com
 
 androidClientId=1014357204865-ljmmlqvmltc3a7r7qa5d9ugntht67e7u.apps.googleusercontent.com
-iosClientId=1014357204865-ljmmlqvmltc3a7r7qa5d9ugntht67e7u.apps.googleusercontent.com
-
+iosClientId=
 EXPO_PUBLIC_ORG_NAME="MediCare"
-EXPO_PUBLIC_ORG_LOGO="https://application-mobile-medicare.onrender.com/logo.png"
-EXPO_PUBLIC_SECURE_FICHE_BASE_URL="https://application-mobile-medicare.onrender.com"
+EXPO_PUBLIC_ORG_LOGO="https://medicare-j4pa.onrender.com/logo.png"
+EXPO_PUBLIC_SECURE_FICHE_BASE_URL="https://medicare-j4pa.onrender.com"
