--- a/backend/.env
+++ b/backend/.env
@@ -4,9 +4,9 @@ JWT_SECRET=secret_jwt_medicare_2025
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=medicare@gmail.com
-SMTP_PASSWORD=medicare@123
-SMTP_FROM=medicare@gmail.com
+SMTP_USER=papeousmanefaye011@gmail.com
+SMTP_PASSWORD=xnsg jnix uuzx cooc
+SMTP_FROM="MediCare <papeousmanefaye@gmail.com>"
 SMTP_IS_SECURE=true
 
 cloudinary_url=https://res.cloudinary.com/medicare/image/upload
