--- a/backend/.env
+++ b/backend/.env
@@ -15,5 +15,5 @@ cloudinary_api_secret=0H7yHtvt0xycdKCcCgMoYsmjJgk
 cloudinary_cloud_name=dipmlivug
 
 androidClientId=1014357204865-ljmmlqvmltc3a7r7qa5d9ugntht67e7u.apps.googleusercontent.com
-iosClientId=1014357204865-ljmmlqvmltc3a7r7qa5d9ugntht67e7u.apps.googleusercontent.com
+iosClientId=
 
