Fix: Admin dashboard stats et graphiques

--- a/mobile/.env
+++ b/mobile/.env
@@ -6,4 +6,4 @@ androidClientId=1014357204865-ljmmlqvmltc3a7r7qa5d9ugntht67e7u.apps.googleuserco
 iosClientId=
 EXPO_PUBLIC_ORG_NAME="MediCare"
 EXPO_PUBLIC_ORG_LOGO="https://medicare-j4pa.onrender.com/logo.png"
-EXPO_PUBLIC_SECURE_FICHE_BASE_URL="https://medicare-j4pa.onrender.com"
+EXPO_PUBLIC_SECURE_FICHE_BASE_URL="https://application-mobile-medicare.onrender.com"
