--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,7 @@ JWT_SECRET=secret_jwt_medicare_2025
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=papeousmanefaye011@gmail.com
-SMTP_PASSWORD=xnsg jnix uuzx cooc
+SMTP_PASS=xnsg jnix uuzx cooc
 SMTP_FROM="MediCare <papeousmanefaye@gmail.com>"
 SMTP_IS_SECURE=true
 
