--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,6 +23,7 @@
     "cloudinary": "^2.8.0",
     "expo": "~54.0.13",
     "expo-auth-session": "~7.0.8",
+    "expo-av": "~14.0.7",
     "expo-constants": "~18.0.9",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
@@ -51,7 +52,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "~15.0.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
