--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=papeousmanefaye011@gmail.com
 SMTP_PASS=xnsg jnix uuzx cooc
-SMTP_FROM="MediCare <papeousmanefaye@gmail.com>"
+SMTP_FROM="MediCare <papeousmanefaye011@gmail.com>"
 SMTP_IS_SECURE=true
 
 cloudinary_url=https://res.cloudinary.com/medicare/image/upload
