Configure SendGrid for password reset emails

--- a/backend/.env
+++ b/backend/.env
@@ -2,12 +2,9 @@ PORT=5000
 MONGODB_URI=mongodb+srv://amadouSeye001:AmadouSeye001@medicare.lwndmm.mongodb.net/?retryWrites=true&w=majority&appName=medicare
 JWT_SECRET=secret_jwt_medicare_2025
 
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=465
-SMTP_USER=papeousmanefaye011@gmail.com
-SMTP_PASS=xnsg jnix uuzx cooc
-SMTP_FROM=MediCare <papeousmanefaye011@gmail.com>
-SMTP_IS_SECURE=true
+SENDGRID_API_KEY=your_sendgrid_api_key_here
+SENDGRID_FROM_EMAIL=papeousmanefaye011@gmail.com
+SENDGRID_FROM_NAME=MediCare
 
 cloudinary_url=https://res.cloudinary.com/medicare/image/upload
 cloudinary_api_key=355667254877725
