--- a/backend/.env
+++ b/backend/.env
@@ -2,9 +2,11 @@ PORT=5000
 MONGODB_URI=mongodb+srv://amadouSeye001:AmadouSeye001@medicare.lwndmm.mongodb.net/?retryWrites=true&w=majority&appName=medicare
 JWT_SECRET=secret_jwt_medicare_2025
 
-SENDGRID_API_KEY=your_sendgrid_api_key_here
-SENDGRID_FROM_EMAIL=papeousmanefaye011@gmail.com
-SENDGRID_FROM_NAME=MediCare
+SMTP_HOST=smtp-relay.brevo.com
+SMTP_PORT=587
+SMTP_USER=9a58b3001@smtp-brevo.com
+SMTP_PASS=your_brevo_smtp_password_here
+SMTP_FROM=MediCare <9a58b3001@smtp-brevo.com>
 
 cloudinary_url=https://res.cloudinary.com/medicare/image/upload
 cloudinary_api_key=355667254877725
