--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,17 @@ PORT=5000
 MONGODB_URI=mongodb+srv://amadouSeye001:AmadouSeye001@medicare.lwndmm.mongodb.net/?retryWrites=true&w=majority&appName=medicare
 JWT_SECRET=secret_jwt_medicare_2025
 
+# Configuration Email - Resend (optionnel)
 RESEND_API_KEY=your_resend_api_key_here
+RESEND_FROM_EMAIL=noreply@votredomaine.com
+
+# Configuration Email - SMTP (Gmail, Outlook, etc.)
+# Pour Gmail: https://myaccount.google.com/apppasswords
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=ousmane@gmail.com
+SMTP_PASS=gntbkjimidqiptbv
+SMTP_FROM="MediCare <ousmane@gmail.com>"
 
 cloudinary_url=https://res.cloudinary.com/medicare/image/upload
 cloudinary_api_key=355667254877725
