--- a/backend/.env
+++ b/backend/.env
@@ -2,17 +2,17 @@ PORT=5000
 MONGODB_URI=mongodb+srv://amadouSeye001:AmadouSeye001@medicare.lwndmm.mongodb.net/?retryWrites=true&w=majority&appName=medicare
 JWT_SECRET=secret_jwt_medicare_2025
 
-# Configuration Email - SMTP (Gmail, Outlook, etc.) - PRIORITAIRE
+# Configuration Email - Resend (Prioritaire)
+RESEND_API_KEY=re_P1S1NsBM_3yd8rThFe5KVtwC21YUEQLNP
+RESEND_FROM_EMAIL=onboarding@resend.dev
+
+# Configuration Email - SMTP (Gmail, Outlook, etc.) - Fallback
 # Pour Gmail: https://myaccount.google.com/apppasswords
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=papeousmanefaye011@gmail.com
 SMTP_PASS=gntb kjim idqi ptbv
 SMTP_FROM="MediCare <papeousmanefaye011@gmail.com>"
-
-# Configuration Email - Resend (optionnel - fallback)
-RESEND_API_KEY=your_resend_api_key_here
-RESEND_FROM_EMAIL=noreply@votredomaine.com
 
 cloudinary_url=https://res.cloudinary.com/medicare/image/upload
 cloudinary_api_key=355667254877725
